[gd_scene load_steps=31 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Fps.gd" type="Script" id=2]
[ext_resource path="res://Texture/Player.png" type="Texture" id=3]
[ext_resource path="res://Player/HotBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Texture/Health.png" type="Texture" id=6]
[ext_resource path="res://Texture/inv_button.png" type="Texture" id=7]
[ext_resource path="res://Player/PickupZone.gd" type="Script" id=8]
[ext_resource path="res://Texture/Tileset/Armor slots.png" type="Texture" id=9]
[ext_resource path="res://PlayerData.gd" type="Script" id=10]
[ext_resource path="res://Texture/Character/player_walk_down.png" type="Texture" id=11]
[ext_resource path="res://Texture/Character/player_walk_up.png" type="Texture" id=12]
[ext_resource path="res://Texture/Character/player_up.png" type="Texture" id=13]
[ext_resource path="res://Texture/Character/player_walk_left.png" type="Texture" id=14]
[ext_resource path="res://Texture/Character/player_walk_right.png" type="Texture" id=15]
[ext_resource path="res://Player/Inventory.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 13, 12 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 14 )
region = Rect2( 141, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 14 )
region = Rect2( 235, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 94, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 235, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 15 )
region = Rect2( 141, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 15 )
region = Rect2( 235, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 13, 12 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 94, 0, 47, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 235, 0, 47, 14 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle down",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 16 ) ],
"loop": true,
"name": "walk left",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 9 ) ],
"loop": true,
"name": "walk up",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "idle right",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "walk right",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "idle up",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "idle left",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 5 ) ],
"loop": true,
"name": "walk down",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=22]

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Energy Underlay" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -116.0
margin_top = -59.0
margin_right = -74.0
margin_bottom = -52.0
color = Color( 0.498039, 0.498039, 0, 1 )

[node name="Health Underlay" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -115.0
margin_top = -71.0
margin_right = -73.0
margin_bottom = -64.0
color = Color( 0.498039, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
show_behind_parent = true
margin_left = -1.0
margin_right = 39.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -131, -71 )

[node name="Health Overlay" type="ColorRect" parent="Control"]
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = -71.0
margin_right = -93.0
margin_bottom = -64.0
color = Color( 1, 0, 0, 1 )

[node name="Energy Overlay" type="ColorRect" parent="Control"]
show_behind_parent = true
margin_left = -115.0
margin_top = -59.0
margin_right = -73.0
margin_bottom = -52.0
color = Color( 1, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.927, 0.95 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
position = Vector2( 4.1151e-06, 0 )
scale = Vector2( 1.54107, 1.50376 )
frames = SubResource( 6 )
animation = "idle down"
speed_scale = 0.9
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Label" type="Label" parent="Camera2D"]
margin_left = -71.0
margin_top = -73.0
margin_right = -51.0
margin_bottom = -59.0
rect_min_size = Vector2( 1, 1 )
rect_scale = Vector2( 0.480503, 0.289591 )
script = ExtResource( 2 )

[node name="UserInterface" type="Node2D" parent="Camera2D"]

[node name="ArmorSlots" type="Sprite" parent="Camera2D/UserInterface"]
visible = false
position = Vector2( 91, -0.35 )
scale = Vector2( 0.472, 0.472 )
texture = ExtResource( 9 )

[node name="HotBar" parent="Camera2D/UserInterface" instance=ExtResource( 4 )]
position = Vector2( -0.3, -8.5 )
scale = Vector2( 0.472, 0.472 )

[node name="Inventory" parent="Camera2D/UserInterface" instance=ExtResource( 16 )]
visible = false
position = Vector2( -71.5, -40 )
scale = Vector2( 0.472, 0.472 )

[node name="InvButton" type="Sprite" parent="."]
position = Vector2( 116.595, -60.565 )
scale = Vector2( 0.472, 0.472 )
z_index = 1
texture = ExtResource( 7 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( -98.509, -61.511 )
scale = Vector2( 0.472, 0.472 )
z_index = 1
texture = ExtResource( 6 )

[node name="PlayerData" type="Node" parent="."]
script = ExtResource( 10 )

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
scale = Vector2( 4, 4 )
shape = SubResource( 22 )

[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
[connection signal="mouse_entered" from="PickupZone" to="." method="_on_PickupZone_mouse_entered"]
